--- a/covid19.html
+++ b/covid19.html
@@ -2,6 +2,9 @@
 <html>
   <head>
       <title>COVID19-AJAYKR</title>
+    
+	<meta charset="utf-8">	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <style src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"></style>
 <style src="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
