--- a/covid19.html
+++ b/covid19.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>COVID19-AJAYKR</title>
-    
-	<meta charset="utf-8">	
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>JavaScript Pie Chart</title>
+
+  <meta charset="utf-8">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <style src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"></style>
 <style src="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"></style>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -20,6 +20,15 @@
   crossorigin="anonymous"></script>
 
 <style type="text/css">
+
+html, body {
+  text-align: center;
+  margin-top: 10px;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+
   .chart-timeline_heartrate .c3-legend-item,
 .chart-scatter_exercise .c3-legend-item { display: none; }
 
@@ -322,7 +331,7 @@ function drawChart() {
      </script>
     
   </head>
-  <body style="text-align: center;margin-top: 20px;">
+  <body >
  
   <input class="input" id="countryy" placeholder="Enter country" type="text">
   <div class="buttons">
@@ -371,8 +380,8 @@ function drawChart() {
                 </div>
 
                </div>
-                <div class="col-lg-6">
-                <div class="col-xs-12 col-md-12">
+                <div class="col-lg-6 col-sm 12">
+                <div class="col-xs-12 col-md-12 col-sm-12">
                     <div id="piechart"></div>
                 </div>
               </div>
