--- a/covid19.html
+++ b/covid19.html
@@ -724,7 +724,7 @@ the default bootstrap behaviour is to keep visible on click, which sucks */
 
                </div>
                 <div class="col-lg-6 col-sm 12">
-                <div class="col-xs-12 col-md-12 col-sm-12">
+                <div class="col-xs-12 col-md-12 col-sm-12" style="text-align:center;">
                     <div id="piechart"></div>
                 </div>
               </div>
